# include_packed

./: Cargo.toml  README.md
include_packed/: Cargo.toml
include_packed/src/: build.rs  lib.rs
include_packed/tests/: integration.rs
include_packed/tests/test_project/: Cargo.toml  build.rs
include_packed/tests/test_project/blobs/: file.txt
include_packed_macros/: Cargo.toml
include_packed_macros/src/: lib.rs
